refactor: modify JVM parameter